--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -86,9 +86,8 @@
 
     [theme=dark] & {
       color: $global-font-color-dark;
-      border-bottom: 1px dashed $global-border-color-dark;
       background: $global-background-color-dark;
-      box-shadow: (0 0 40px rgba(94, 104, 125, .3));
+      box-shadow: (0 0 40px rgba(64, 67, 72, 0.3));
     }
 
     .featured-image-preview {
